# codebase_agent

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/faiss_index/Autonomous-API-Reverse-Engineering-System/: index.faiss  index.pkl
src/: __init__.py  agent.py  cloner.py  ingest.py  tools.py  vectorstore.py
